--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,12 @@ body {
 }
 
 .homepage-post-container {
-  background-color: rgb(214, 214, 212);
+  background-color: rgb(245, 244, 208);
   margin: 20px, 0px 10px 10px;
   width: 800px;
-  margin: auto;
+  margin-left: 50px;
   border: solid 3px black;
+  border-radius: 50px;
 }
 
 .imgContainer {
@@ -50,41 +51,44 @@ a {
   color: #03045e;
 
   font-weight: 900;
-  font-size: 100px;
+  font-size: 70px;
   font-family: "Poppins";
   text-align: center;
-  margin: 30px 0px 0px 50px;
+  margin: 0px 0px 0px 50px;
 }
 
 #header-container {
   width: 100%;
   height: auto;
   display: flex;
-  margin-left: 50px;
+  margin-left: 45px;
   position: relative;
-  bottom: 40px;
+  bottom: 130px;
+  width: fit-content;
 }
 
 .info {
   font-family: "Poppins";
   font-weight: 300;
-  font-size: 20px;
+  font-size: 15px;
   border: solid 7px #00b4d8;
   padding: 0px 14px 0px 14px;
+  border-radius: 40px;
+  margin-right: 5px;
 }
 
 .info-text {
   margin: 0px;
 }
 
-#title-img {
+#nettuno-logo {
   display: flex;
   justify-content: space-between;
 }
 
 #logo {
-  width: 210px;
-  height: 210;
+  width: 200px;
+  height: 190px;
   margin: 20px 55px 25px 0px;
   border-radius: 20%;
 }
@@ -94,6 +98,7 @@ a {
   font-size: 40px;
   padding: 10px;
   text-align: center;
+  color: #1d3557;
 }
 
 .testo-post,
@@ -102,4 +107,39 @@ a {
   font-size: 20px;
   padding: 0px 25px 10px 25px;
   color: rgb(44, 44, 44);
+}
+
+.img-title {
+  margin: 15px 0px 10px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.immagini {
+  border-radius: 20px;
+  width: 400px;
+  height: auto;
+}
+
+.titolo-testo {
+  width: 400px;
+}
+
+.data-post {
+  text-align: end;
+  font-style: italic;
+  margin-right: 20px;
+}
+
+#ultime-notizie {
+  font-family: "Poppins";
+  font-style: oblique;
+  font-size: 44px;
+  color: #1a9fcf;
+  margin: 0px 0px 20px 50px;
+}
+
+#all-post-container {
+  position: relative;
+  bottom: 60px;
 }
