--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="title-img">
+    <div id="nettuno-logo">
       <h1 id="nettuno-scacchi">NETTUNO SCACCHI</h1>
       <img
         src="https://pbs.twimg.com/profile_images/378800000344267493/b63be7b04b2b0cb41ce91fa9aa67e7e3.jpeg"
@@ -28,6 +28,27 @@
         <h1 class="info-text">ORARI DI APERTURA</h1>
       </div>
     </div>
+    <div id="all-post-container">
+      <h2 id="ultime-notizie">ULTIME NOTIZIE</h2>
+      <% if(completo){ %> <% completo.forEach(blog =>{ %>
+      <a href="/blog/<%= blog.id  %>">
+        <div class="homepage-post-container" id="<%= blog.id %>">
+          <div class="img-title">
+            <% blog.path.forEach(image =>{ %> <img class="immagini" src="<%=
+            ("/",image) %>" /> <% }) %>
+            <div class="titolo-testo">
+              <h3 class="titolo-post"><%=blog.titolo %></h3>
+
+              <h3 class="testo-post"><%=blog.testo.slice(0,100) + "..." %></h3>
+            </div>
+          </div>
+
+          <h3 class="data-post"><%=blog.data %></h3>
+          <div class="imgContainer"></div>
+        </div>
+      </a>
+      <%})} %>
+    </div>
 
     <a href="./admin/login">
       <button>
@@ -35,21 +56,5 @@
         <%="login"%> <% } %>
       </button></a
     >
-
-    <h2>Post</h2>
-
-    <% if(completo){ %> <% completo.forEach(blog =>{ %>
-    <a href="/blog/<%= blog.id  %>">
-      <div class="homepage-post-container" id="<%= blog.id %>">
-        <h3 class="titolo-post"><%=blog.titolo %></h3>
-        <h3 class="testo-post"><%=blog.testo %></h3>
-        <h3 class="data-post"><%=blog.data %></h3>
-        <div class="imgContainer">
-          <% blog.path.forEach(image =>{ %> <img class="immagini" src="<%=
-          ("/",image) %>" /> <% }) %>
-        </div>
-      </div>
-    </a>
-    <%})} %>
   </body>
 </html>
