old post homepage layout

--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -21,7 +21,7 @@
       <input
         type="file"
         name="foto"
-        accept=".jpg, .jpeg, .png, .heic"
+        accept=".jpg, .jpeg, .png, .heic, .jfif"
         multiple
       />
       <button>submit</button>
