--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,14 +13,11 @@ body {
   border-radius: 50px;
 }
 
-.imgContainer {
-  display: flex;
-  justify-content: center;
-}
-
 .immagini {
-  width: 20vw;
+  width: 300px;
   height: auto;
+  margin-top: 30px;
+  border-radius: 20px;
 }
 
 .homepage-post-container:hover {
@@ -95,8 +92,8 @@ a {
 
 .titolo-post {
   font-family: "Poppins";
-  font-size: 40px;
-  padding: 10px;
+  font-size: 30px;
+  padding: 8px;
   text-align: center;
   color: #1d3557;
 }
@@ -107,18 +104,13 @@ a {
   font-size: 20px;
   padding: 0px 25px 10px 25px;
   color: rgb(44, 44, 44);
+  margin-top: 30px;
 }
 
 .img-title {
   margin: 15px 0px 10px 20px;
   display: flex;
-  justify-content: space-between;
-}
-
-.immagini {
-  border-radius: 20px;
-  width: 400px;
-  height: auto;
+  justify-content: space-around;
 }
 
 .titolo-testo {
@@ -137,9 +129,64 @@ a {
   font-size: 44px;
   color: #1a9fcf;
   margin: 0px 0px 20px 50px;
+  position: relative;
+  bottom: 10px;
 }
 
 #all-post-container {
   position: relative;
   bottom: 60px;
+}
+
+.old-post {
+  width: 350px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  border: solid 2px black;
+  border-radius: 20px;
+  margin: 30px 0px 0px 50px;
+}
+
+.old-post-img-container {
+  width: 350px;
+  height: auto;
+  object-fit: contain;
+}
+.old-post-img {
+  width: 100%;
+  height: 204px;
+  border-radius: 18px 18px 0px 0px;
+}
+
+hr {
+  width: 99%;
+  background-color: red;
+}
+
+.old-post-testo {
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+}
+
+.old-post-container {
+  display: grid;
+  grid-template-columns: 350px 350px;
+  gap: 0px 100px;
+}
+
+#page-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#left {
+  width: fit-content;
+}
+
+#puzzle {
+  margin-right: 50px;
 }
