--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -15,7 +15,7 @@
         class="imgCompletePost"> <% })} %>
       </div>
       <h3><%=titolo %></h3>
-      <h3><%=testo %></h3>
+      <h3 class="single-post-testo"><%=testo %></h3>
       <h3><%=data %></h3>
     </div>
     <% } %>
