--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,10 +31,6 @@ a {
   color: inherit;
 }
 
-.admin-panel-post-container {
-  background-color: bisque;
-}
-
 .imgContainer-single-post {
   display: flex;
 }
@@ -159,7 +155,7 @@ a {
   left: 0; /* Adjust this to position the image horizontally */
   width: auto; /* Maintain the original width of the image */
   height: auto;
-  border-radius: 19px;
+  border-radius: 19px 2px 2px 19px;
 }
 
 .old-post-titolo-data {
