--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>blog</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/blog.css" />
   </head>
   <body>
-    <%if(post){ %>
-    <div class="single-post-container">
-      <% if(path){ %>
-      <div class="imgContainer-single-post">
-        <% path.forEach(immagine=>{ %> <img src="<%= ("/", immagine) %>"
-        class="imgCompletePost"> <% })} %>
-      </div>
-      <h3><%=titolo %></h3>
-      <h3 class="single-post-testo"><%=testo %></h3>
-      <h3><%=data %></h3>
+    <h3 id="titolo"><%=titolo %></h3>
+
+    <h3 id="data"><%=data %></h3>
+
+    <%if(post){ %> <% if(path){ %>
+    <div>
+      <% path.forEach(immagine=>{ %> <img src="<%= ("/", immagine) %>"
+      class="imgCompletePost"> <% })} %>
     </div>
+
+    <h3 id="testo"><%=testo %></h3>
+
     <% } %>
   </body>
 </html>
