info pages link in the header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,3 +279,9 @@ hr {
 .single-post-testo {
   white-space: pre-wrap;
 }
+
+.info:hover {
+  background-color: #03045e;
+  color: antiquewhite;
+  transition: 300ms;
+}
