--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,13 +19,15 @@
 
     <div id="header-container">
       <div class="info">
-        <h1 class="info-text">CHI SIAMO</h1>
+        <a href="/chi-siamo"> <h1 class="info-text">CHI SIAMO</h1></a>
       </div>
       <div class="info">
-        <H1 class="info-text">DOVE SIAMO</H1>
+        <a href="/dove-siamo"> <H1 class="info-text">DOVE SIAMO</H1></a>
       </div>
       <div class="info">
-        <h1 class="info-text">ORARI DI APERTURA</h1>
+        <a href="/orari-apertura">
+          <h1 class="info-text">ORARI DI APERTURA</h1></a
+        >
       </div>
     </div>
 
