--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,29 +8,7 @@
   </head>
 
   <body>
-    <div id="nettuno-logo">
-      <h1 id="nettuno-scacchi">NETTUNO SCACCHI</h1>
-      <img
-        src="https://pbs.twimg.com/profile_images/378800000344267493/b63be7b04b2b0cb41ce91fa9aa67e7e3.jpeg"
-        alt=""
-        id="logo"
-      />
-    </div>
-
-    <div id="header-container">
-      <div class="info">
-        <a href="/chi-siamo"> <h1 class="info-text">CHI SIAMO</h1></a>
-      </div>
-      <div class="info">
-        <a href="/dove-siamo"> <H1 class="info-text">DOVE SIAMO</H1></a>
-      </div>
-      <div class="info">
-        <a href="/orari-apertura">
-          <h1 class="info-text">ORARI DI APERTURA</h1></a
-        >
-      </div>
-    </div>
-
+    <%- include('../partials/header.ejs') %>
     <div id="page-container">
       <div id="left">
         <div id="all-post-container">
@@ -176,5 +154,6 @@
         </button></a
       >
     </div>
+    <%- include('../partials/footer.ejs') %>
   </body>
 </html>
