--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: whitesmoke;
+  margin: 0px;
 }
 
 .homepage-post-container {
@@ -265,6 +266,7 @@ hr {
 #btn-container {
   display: flex;
   justify-content: flex-end;
+  height: 200px;
 }
 
 #loginBtn:hover {
@@ -284,4 +286,17 @@ hr {
   background-color: #03045e;
   color: antiquewhite;
   transition: 300ms;
+}
+
+#footer {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins";
+  font-size: 28px;
+  background-color: #003566;
+  color: #ccc5b9;
+  margin-top: 80px;
 }
