--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -12,15 +12,41 @@
     <script>
       tinymce.init({
         selector: "#textarea",
+        plugins: "image code",
+        toolbar: "undo redo | link image | code",
+        file_picker_types: "image",
+        image_title: true,
+        automatic_uploads: true,
+        file_picker_callback: function (cb, value, meta) {
+          var input = document.createElement("input");
+          input.setAttribute("type", "file");
+          input.setAttribute("accept", "image/*");
+
+          input.onchange = function () {
+            var file = this.files[0];
+            var reader = new FileReader();
+
+            reader.onload = function () {
+              var id = "blobid" + new Date().getTime();
+              var blobCache = tinymce.activeEditor.editorUpload.blobCache;
+              var base64 = reader.result.split(",")[1];
+              var blobInfo = blobCache.create(id, file, base64);
+              blobCache.add(blobInfo);
+
+              // call the callback and populate the Title field with the file name
+              cb(blobInfo.blobUri(), { title: file.name });
+            };
+            reader.readAsDataURL(file);
+          };
+
+          input.click();
+        },
       });
-      // Get the HTML contents of the currently active editor
-      console.debug(tinymce.activeEditor.getContent());
 
-      // Get the contents of the currently active editor as plain text
-      tinymce.activeEditor.getContent({ format: "text" });
-
-      // Get content of a specific editor:
-      tinymce.get("content id").getContent();
+      // Call uploadImages before submitting the form
+      tinymce.activeEditor.uploadImages().then(() => {
+        document.forms[0].submit();
+      });
     </script>
   </head>
   <body>
@@ -45,7 +71,7 @@
       <label>testo</label>
       <textarea name="testo" class="input" id="textarea"></textarea>
 
-      <label>foto</label>
+      <label>foto-post</label>
       <input
         type="file"
         name="foto"
